<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="crear"
        android:text="@string/btnCrear" />

    <Button
        android:id="@+id/btnVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ver"
        android:text="@string/btnVer" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="eliminar"
        android:text="@string/btnEliminar" />
</LinearLayout>